# cli_cqu

./: .gitignore  LICENSE  README.rst  pyproject.toml  yapf_style.cfg
.github/workflows/: app.yaml
cli_cqu/: __init__.py  login.py  model.py
cli_cqu/data/: __init__.py  js_equality.py  route.py  schedule.py  ua.py
cli_cqu/excpetion/: signal.py
cli_cqu/util/: calendar.py  datetime.py
example/: download_courses_table.py
tests/: test_calendar.py  test_cli_cqu.py  test_datetime.py
