[tool.poetry]
name = "cli_cqu"
version = "0.1.0"
description = ""
authors = ["zombie110year <zombie110year@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

