[tool.poetry]
name = "cli_cqu"
version = "0.1.0"
description = "CLI CQU 是重庆大学 jxgl 网站的命令行界面。"
authors = ["zombie110year <zombie110year@outlook.com>"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/zombie110year/cli_cqu"
repository = "https://github.com/zombie110year/cli_cqu.git"
packages = [
    { include = "cli_cqu" }
]
exclude = [
    "debug.py"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
pydantic = "^1.4"
icalendar = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
isort = "^4.3.21"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
[tool.poetry.scripts]
cli-cqu = "cli_cqu:cli_main"
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zombie110year/cli_cqu/issues"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
